@@ -350,7 +350,13 @@ static bool set_value(const char* fqn, Value& v)
  
     if ( !p )
     {
-        ParseError("can't find %s", fqn);
+        if ( key == mod->get_name() )
+            // handle things like x = { 1 }
+            // where x is a table not a list and 1 should be 
+            // considered a key not a value
+            ParseError("can't find %s.%s", fqn, v.get_as_string());
+        else
+            ParseError("can't find %s", fqn);
         ++s_errors;
         return false;
     }
